# wordler

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_utils.py  test_wordler.py
wordler/: __init__.py  browser.py  cli.py  wordler.py
wordlerer/: __init__.py  browser.py  cli.py  wordlerer.py
