[tool.poetry]
name = "wordler"
version = "0.1.0"
description = ""
authors = ["Tibor Mikita <tibor@mikita.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
english-words = "^1.1.0"
selenium = "^4.1.0"
pydantic = "^1.9.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
